--- a/client/app/viewRequest/viewRequest.scss
+++ b/client/app/viewRequest/viewRequest.scss
@@ -25,6 +25,10 @@
     box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
     border-radius: 3px;
     padding: 25px;
+
+    hr {
+      margin: 15px 0px;
+    }
     
     .row {
       margin-bottom: 20px;
