--- a/client/app/request/request.scss
+++ b/client/app/request/request.scss
@@ -26,6 +26,7 @@
 
   .sub-header {
     display: block;
+    margin-bottom: 20px;
     width: 100%;
     color: rgba(0,0,0,0.8);
     border-bottom: solid 1px rgba(0,0,0,0.87);
