--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -19,6 +19,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // injector
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
+@import 'adminHome/adminHome.scss';
 @import 'main/main.scss';
 @import 'request/request.scss';
 @import 'viewRequest/viewRequest.scss';
